fix: vertical tree alignment

--- a/src/app/components/tree/tree.component.scss
+++ b/src/app/components/tree/tree.component.scss
@@ -36,7 +36,7 @@ ul {
 }
 
 button {
-  width: 2rem;
+  min-width: 2rem;
   height: 2rem;
   padding: 0;
   border: none;
